--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="hero-section">
         <nav>
-            <img src="assets/isacc_logo.png" alt="ISACC Logo" class="logo">
+            <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
         </nav>
         <div class="hero-text">
             <h1>Equipping leaders & communities <br>for a good, thriving Philippines.</h1>
@@ -32,7 +32,7 @@
     <section class="carousel-section">
         <div class="carousel">
             <div class="carousel-slide active">
-                <img src="https://placehold.co/1200x600/556B2F/white?text=Carousel+Image+1" alt="Equipping Communities">
+                <img src="image2.jpg" alt="Equipping Communities">
                 <div class="slide-caption">
                     <h3>Equipping Communities and Organizations <br><span>with training to uplift the poor</span></h3>
                 </div>
@@ -101,7 +101,7 @@
                 <p>Our mission has found much solidarity. We have had historical links through mutual projects and individuals, and support from many partners:</p>
             </div>
             <div class="partners-right">
-                 <img src="https://placehold.co/400x250/cccccc/333?text=Partner+Image" alt="Framed partner image">
+                 <img src="image7.jpg" alt="Framed partner image">
             </div>
         </div>
         <div class="stats-container">
