--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="https://placehold.co/1200x600/4682B4/white?text=Carousel+Image+2" alt="Cultivating Stewardship">
+                <img src="image3.jpg" alt="Cultivating Stewardship">
                 <div class="slide-caption">
                     <h3>Cultivating a Culture of Stewardship<br><span>in local Filipino enterprises for sustainable growth</span></h3>
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="https://placehold.co/1200x600/8B4513/white?text=Carousel+Image+3" alt="Good Governance">
+                <img src="image4.jpg" alt="Good Governance">
                 <div class="slide-caption">
                     <h3>Championing Good Governance<br><span>and active citizenship</span></h3>
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="https://placehold.co/1200x600/6A5ACD/white?text=Carousel+Image+4" alt="Publishing Media">
+                <img src="image5.jpg" alt="Publishing Media">
                 <div class="slide-caption">
                     <h3>Publishing Thought-Leading Media<br><span>on faith, justice and social transformation</span></h3>
                 </div>
