--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header class="hero-section">
+    <header class="hero-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('image1.jpg');">
         <nav>
             <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
         </nav>
