--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </header>
 
     <section class="intro-section">
-        <h2>In the Philippines, the heart to do good is everywhere.</h2>
+        <h2>In the Philippines,<br>the heart to do good is everywhere.</h2>
         <p>
             From neighborhood pantries to mission-driven startups, <br>
-            kindness runs deep in our culture. <br><br>
-            But good intentions alone aren’t enough. What we often lack is structure. Clear ways to turn compassion into lasting impact.<br><br>
-            That's why ISACC is building tools and ideas for communities and businesses to make generosity not just a moment, but a movement.
+            <strong>kindness runs deep in our culture. </strong><br><br>
+            But good intentions alone aren’t enough. <strong>What we often lack is structure.</strong> Clear ways to turn compassion into lasting impact.<br><br>
+            That's why ISACC is building tools and ideas for <strong>communities and businesses</strong> to make generosity not just a moment, but a movement.
         </p>
     </section>
 
