--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <nav>
             <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
         </nav>
+        
+        <button class="menu-toggle" aria-label="Open menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div class="hero-text">
             <h1>Equipping leaders & communities <br>for a good, thriving Philippines.</h1>
             <p>Explore how we serve</p>
@@ -117,6 +123,19 @@
         <p><strong>ISACC</strong><br>Institute for Studies in Asian Church and Culture</p>
     </footer>
 
+    <div id="fullscreen-menu">
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings">Trainings</a></li>
+                <li><a href="/research">Research</a></li>
+                <li><a href="/podcast">Podcast</a></li>
+                <li><a href="/publications">Publications</a></li>
+                <li><a href="/advocacy">Advocacy</a></li>
+                <li><a href="/about">About</a></li>
+            </ul>
+        </nav>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
