--- a/about.html
+++ b/about.html
@@ -151,7 +151,31 @@
     </section>
     
     <footer>
-        <p><strong>ISACC</strong><br>Institute for Studies in Asian Church and Culture</p>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
     </footer>
 
     <div id="fullscreen-menu">
