--- a/advocacy.html
+++ b/advocacy.html
@@ -110,7 +110,7 @@
                 <li><a href="/podcast.html">Podcast</a></li>
                 <li><a href="/publications.html">Publications</a></li>
                 <li><a href="/advocacy.html">Advocacy</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </div>
