--- a/publications.html
+++ b/publications.html
@@ -162,8 +162,8 @@
                 <li><a href="/research.html">Research</a></li>
                 <li><a href="/podcast.html">Podcast</a></li>
                 <li><a href="/publications.html">Publications</a></li>
-                <li><a href="/advocacy">Advocacy</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </div>
