--- a/trainings.html
+++ b/trainings.html
@@ -160,11 +160,11 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/trainings.html">Trainings</a></li>
-                <li><a href="/research">Research</a></li>
-                <li><a href="/podcast">Podcast</a></li>
-                <li><a href="/publications">Publications</a></li>
-                <li><a href="/advocacy">Advocacy</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </div>
