--- a/index.html
+++ b/index.html
@@ -37,33 +37,37 @@
 
     <section class="carousel-section">
         <div class="carousel">
-            <div class="carousel-slide active">
+            <div class="carousel-slide">
                 <img src="image2.jpg" alt="Equipping Communities">
                 <div class="slide-caption">
                     <h3>Equipping Communities and Organizations <br><span>with training to uplift the poor</span></h3>
+                    <a href="/trainings.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="image3.jpg" alt="Cultivating Stewardship">
                 <div class="slide-caption">
                     <h3>Cultivating a Culture of Stewardship<br><span>in local Filipino enterprises for sustainable growth</span></h3>
+                     <a href="/research.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="image4.jpg" alt="Good Governance">
                 <div class="slide-caption">
                     <h3>Championing Good Governance<br><span>and active citizenship</span></h3>
+                     <a href="/advocacy.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="image5.jpg" alt="Publishing Media">
                 <div class="slide-caption">
                     <h3>Publishing Thought-Leading Media<br><span>on faith, justice and social transformation</span></h3>
+                     <a href="/publications.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
         </div>
-        <button class="carousel-arrow prev" onclick="moveSlide(-1)">&#10094;</button>
-        <button class="carousel-arrow next" onclick="moveSlide(1)">&#10095;</button>
+        <button class="carousel-arrow prev">&#10094;</button>
+        <button class="carousel-arrow next">&#10095;</button>
     </section>
 
     <section class="cta-section">
