--- a/publications.html
+++ b/publications.html
@@ -4,169 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISACC - Publications</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="hero-section hero-publications">
-        <nav>
-            <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
-        </nav>
-        
-        <button class="menu-toggle" aria-label="Open menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-
-        <div class="hero-page-title">
-            <h1>Publications</h1>
-        </div>
+        <nav><img src="isacc_logo.png" alt="ISACC Logo" class="logo"></nav>
+        <button class="menu-toggle" aria-label="Open menu"><span></span><span></span><span></span></button>
+        <div class="hero-page-title"><h1>Publications</h1></div>
     </header>
 
-    <section class="intro-section">
+    <section class="intro-section text-center-underline">
         <div class="content-wrapper">
-            <p>Besides publications arising from its research and documentation projects, ISACC publishes books, monographs, and articles on its missional themes. It also encourages artists and writers to produce artistic and culturally-sensitive ways of communicating the gospel.</p>
+            <h2>Sharing Wisdom for a Changing World.</h2>
+            <p style="text-align:center;">ISACC publishes books, monographs, and articles that explore our core missional themes, providing resources for leaders and thinkers engaged in social transformation.</p>
         </div>
     </section>
 
     <section class="books-section">
         <div class="content-wrapper">
 
-            <article class="book-item">
-                <h2>To Be in History, Dark Days of Authoritarianism</h2>
-                <p>First-person accounts of the Philippine experience of martial rule by a mix of social scientists, literary writers, a journalist and a politician. First published and funded by Langham Publishing in UK and re-issued locally under the imprint of OMFLit.</p>
-                <p>The history of the Philippines is a long and complex one but the stories and reflections in Dark Days of Authoritarianism, from remarkable individuals who were willing to stake their lives for freedom, shed light on life under the martial law instituted by President Ferdinand Marcos from 1972 to 1981, and up to the peaceful popular uprising of 1986. This book not only covers the social, economic and political conditions across the country during martial law but also how those conditions affected ordinary people personally and spiritually. Many of the contributions illustrate the strength and determination of Philippine women to create a better society despite being met by great adversity and the importance of Christian faith for sustaining the lives of those who suffered and survived this tumultuous period. This book provides important lessons for a new generation facing the menace of authoritarianism today, wherever they are, to fight for democracy and resist any attempts to diminish people’s freedom.</p>
-                <div class="testimonials">
-                    <h4>What they say…</h4>
-                    <blockquote>
-                        <p>“The longing for freedom and social justice lies deep in the human psyche. This moving book tells us the story of true events in the Philippines, and how different groups sought to bring about change. In particular, it shows how committed Christian men and women can seek the good of their society, the power of prayer, and the grace of God. A prophetic voice for our times.”</p>
-                        <footer>– ROSE DOWSETT, Missiologist</footer>
-                    </blockquote>
-                    <blockquote>
-                        <p>“This book will humble, encourage and enlighten all who continue to struggle today in the Philippines and in other parts of the world with political repression and the non-fulfilment of political dreams.”</p>
-                        <footer>– VINOTH RAMACHANDRA, PhD, Secretary for Dialogue & Social Engagement, IFES</footer>
-                    </blockquote>
-                    <blockquote>
-                        <p>“What happened to the Philippine people from the 1970s till now is relevant to the world at large. especially for those struggling in the post-colonial era in Africa, Latin and South Americas, and Asia.”</p>
-                        <footer>– WING TAI LEUNG, PHD, Founding President, Lumina College, Hong Kong</footer>
-                    </blockquote>
-                     <blockquote>
-                        <p>“This is actually a global phenomenon. It’s a book urgently relevant.”</p>
-                        <footer>– MARCELO VARGAS A., Centro de Capacitación Misionera, Bolivia</footer>
-                    </blockquote>
+            <article class="book-showcase">
+                <div class="book-cover">
+                    <img src="book1.jpg" alt="To Be in History, Dark Days of Authoritarianism">
+                </div>
+                <div class="book-details">
+                    <h3>Explore the Lessons of History</h3>
+                    <h2>To Be in History, Dark Days of Authoritarianism</h2>
+                    <p>First-person accounts of the Philippine experience of martial rule, shedding light on the social, personal, and spiritual conditions that shaped a generation.</p>
+                    <div class="testimonials">
+                        <blockquote>
+                            <p>“This moving book tells us the story of true events... and how committed Christian men and women can seek the good of their society. A prophetic voice for our times.”</p>
+                            <footer>– ROSE DOWSETT, Missiologist</footer>
+                        </blockquote>
+                    </div>
                 </div>
             </article>
 
-            <article class="book-item">
-                <h2>Rise Up and Walk, Religion and Culture in Empowering the Poor</h2>
-                <p>A critique of the development narrative from biblical and cultural perspectives. It offers practical insights on how to go about doing wholistic development based on learnings from an ICCO-funded research on the economic interventions of 7 NGOs in 7 poor communities.</p>
-                <div class="testimonials">
-                     <blockquote>
-                        <p>“…Accordingly, it was assumed that the change of the situation of the poor would take place through development based on technology, money, and availability of natural resources. Dr. Melba Maggay does an excellent work to correct this misconception and to show that in the end this kind of development has proved to be a fallacy – wherever it has been applied it has benefited the elite classes but it has left the poor largely unattended…”</p>
-                        <footer>– C. René Padilla, President Emeritus, Micah Network, President Emeritus of the Kairos Foundation, Buenos Aires, Argentina.</footer>
-                    </blockquote>
-                    <h4>What they say…</h4>
-                    <blockquote>
-                        <p>“Melba Padilla Maggay is an anthropologist who unapologetically interposes the religious lens into her critical examination of contemporary social and economic systems. The result is a stunning study that casts new light on the old issues of poverty, inequality, and underdevelopment in a globalized world... This is a unique book on the theory and practice of solidarity that academics, social activists, development agencies, and religious congregations alike will find immensely relevant to their work.”</p>
-                        <footer>– Randolf S. David, Emeritus Professor of Sociology, University of the Philippines</footer>
-                    </blockquote>
-                    <blockquote>
-                        <p>“My manuscript copy of Rise Up and Walk is battered, dog-eared, underlined, highlighted and scribbled upon. Clearly it is not a book to be ignored! Indeed, it is a profoundly challenging and practical engagement with the grievous injustice of persistent poverty and oppressive greed... This is an important read for anyone who wants to better understand what it means to do justice, love kindness and walk humbly with God.”</p>
-                        <footer>– Steve Bradbury, Director of the Micah 6:8 Center at Tabor College Victoria, formerly Director of Tearfund Australia and Chair of the Micah Network.</footer>
-                    </blockquote>
+            <article class="book-showcase">
+                <div class="book-cover">
+                    <img src="book2.jpg" alt="Rise Up and Walk">
+                </div>
+                <div class="book-details">
+                    <h3>Understand Wholistic Development</h3>
+                    <h2>Rise Up and Walk</h2>
+                    <p>A critique of traditional development narratives, offering biblical and cultural perspectives on how to truly empower the poor based on real-world research.</p>
+                    <div class="testimonials">
+                        <blockquote>
+                            <p>“A stunning study that casts new light on the old issues of poverty, inequality, and underdevelopment... Immensely relevant.”</p>
+                            <footer>– Randolf S. David, Emeritus Professor of Sociology, University of the Philippines</footer>
+                        </blockquote>
+                    </div>
                 </div>
             </article>
 
-            <article class="book-item">
-                <h2>Global Kingdom, Global People</h2>
-                <p>Biblical reflections on globalization and the migration crisis. Published by Langham Publishing in the UK and printed locally as <em>Living Faithfully in a Multicultural World</em> by OMFLit.</p>
-                <p>In an age of unsurpassed globalization, Melba Maggay reminds us of the beauty of unique cultures no matter how small their imprint on the world may seem. Yet these cultures do not exist in isolation, but have a complex interrelation with one another, be they monoliths such as western capitalism or subsistence communities like El Nido on the island of Palawan, the home of the author’s ancestors. This rich global tapestry is a gift from God, yet not without imperfection, sin or hardship. It is these realities to which we must apply the gospel in our own lives and in missiology. This book gives a prophetic call to proclaim the good news and do justice in and towards every culture under the sun, while demystifying some of the major narratives that inform worldviews across the globe today. And it is the kingdom of God for every tribe, tongue, people and nation that brings true global unity.</p>
-                <div class="testimonials">
-                    <blockquote>
-                        <p>“Melba Maggay offers us a penetrating interweaving of the biblical text with key issues of our contemporary world. She opens up the biblical story with flair and imagination. The result is a crucially important book, written through the experience and reflections of a very fine writer.”</p>
-                        <footer>– ELAINE STORKEY, Former President of Tearfund</footer>
-                    </blockquote>
-                    <blockquote>
-                        <p>“A brilliant book capturing well the author’s experience in a place of pain, tough research and honest reflection on a biblical perspective. It draws the reader to seriously consider a personal and collective response to contemporary global missional challenges.”</p>
-                        <footer>– CB SAMUEL, Theological Advisor, The Evangelical Fellowship of India Commission on Relief (EFICOR), India</footer>
-                    </blockquote>
+            <article class="book-showcase">
+                <div class="book-cover">
+                    <img src="book3.jpg" alt="Global Kingdom, Global People">
+                </div>
+                <div class="book-details">
+                    <h3>Navigate a Globalized World</h3>
+                    <h2>Global Kingdom, Global People</h2>
+                    <p>Biblical reflections on globalization and the migration crisis, giving a prophetic call to do justice in and towards every culture under the sun.</p>
+                    <div class="testimonials">
+                        <blockquote>
+                            <p>“A brilliant book capturing well the author’s experience in a place of pain, tough research and honest reflection on a biblical perspective.”</p>
+                            <footer>– CB SAMUEL, Theological Advisor, EFICOR, India</footer>
+                        </blockquote>
+                    </div>
                 </div>
             </article>
         </div>
     </section>
 
-    <section class="arts-section">
-        <div class="content-wrapper">
-            <h2>Culture and the Arts</h2>
-            <p>As part of its concern for cultural rootedness, ISACC runs a <em>Himnaryong Pilipino</em> program, aimed at stimulating the growth of Filipino liturgical music. In 1981 it mounted the First Christian Art Festival, a series of competitions in painting, hymn writing, poetry, playwriting and photography. This culminated in a visual arts exhibit and a drama-dance concert at the Cultural Center of the Philippines.</p>
-            <p>Since then, ISACC has nurtured fresh talents through its Samba hymn series. It has also encouraged the production of original theater sketches through its street theater named Pasakalye.</p>
-            <p>ISACC also promotes the deepening of cultural and historical awareness through various artistic projects. One of these is the production of <em>Bayan, Isang Paa Na Lamang</em>, a zarzuela aimed at educating young people on the events and issues that surfaced during the Philippine Revolution of 1896. This was a prize-winner in the National Centennial Literary Competition in 1998 in commemoration of 100 years of Philippine Independence. The libretto was written by the ISACC President and set to music by the National Artist in Music, Lucio San Pedro.</p>
-            <p>Another landmark production was <em>Diyata’t Isang Sanggol</em>, a musicale-cantata written by the ISACC President and set to music by a team of six composers. The Cantata attempts a retelling of the Christmas story within the context and issues of contemporary Filipino culture.</p>
-        </div>
-    </section>
-
-    <section class="rappler-section">
+     <section class="rappler-section">
         <div class="content-wrapper">
             <h2>Articles on Rappler</h2>
+            <p style="text-align:center; max-width: 700px; margin: -20px auto 40px auto;">Applying a biblical lens to the pressing issues of the day. Explore our contributions to the national conversation.</p>
             <div class="rappler-grid">
                 <a href="https://www.rappler.com/voices/thought-leaders/reflection-idols-of-our-time/" target="_blank" class="rappler-card">
                     <h3>[Reflection] The idols of our time</h3>
-                    <p>Read on Rappler →</p>
+                    <p>A look at the modern-day idols that captivate hearts and shape our society's values.</p>
+                    <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-on-duterte-arrest-and-sovereignty/" target="_blank" class="rappler-card">
                     <h3>[OPINION] On Duterte, arrest, and sovereignty</h3>
-                    <p>Read on Rappler →</p>
+                    <p>Analyzing the complex interplay between national sovereignty and international justice.</p>
+                    <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-profaning-appropriations-nothing-left-sacred/" target="_blank" class="rappler-card">
-                    <h3>[OPINION] On profaning appropriations: Is there nothing left sacred?</h3>
-                    <p>Read on Rappler →</p>
+                    <h3>[OPINION] On profaning appropriations</h3>
+                    <p>A discussion on the sacredness of public funds and the moral implications of corruption.</p>
+                    <span>Read on Rappler →</span>
                 </a>
             </div>
         </div>
     </section>
-    
+
     <footer>
-        <div class="footer-content">
-            <div class="footer-col">
-                <h4>ISACC</h4>
-                <p>Institute for Studies in Asian Church and Culture</p>
-            </div>
-            <div class="footer-col">
-                <h4>Contact Us</h4>
-                <p>
-                    Landline:<br>
-                    +63 (02) 8255-7614<br>
-                    +63 (02) 8470-1044
-                </p>
-                <p>
-                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
-                </p>
-            </div>
-            <div class="footer-col">
-                <h4>Our Location</h4>
-                <p>
-                    4 Malinis, Diliman<br>
-                    Quezon City, Metro Manila<br>
-                    Philippines
-                </p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
     <div id="fullscreen-menu">
-        <nav class="menu-nav">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/trainings.html">Trainings</a></li>
-                <li><a href="/research.html">Research</a></li>
-                <li><a href="/podcast.html">Podcast</a></li>
-                <li><a href="/publications.html">Publications</a></li>
-                <li><a href="/advocacy.html">Advocacy</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
-    </div>
+        </div>
 
     <script src="script.js"></script>
 </body>
