--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISACC - Equipping Leaders & Communities</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,12 +13,7 @@
         <nav>
             <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
         </nav>
-        
-        <button class="menu-toggle" aria-label="Open menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <button class="menu-toggle" aria-label="Open menu"><span></span><span></span><span></span></button>
         <div class="hero-text">
             <h1>Equipping leaders & communities <br>for a good, thriving Philippines.</h1>
             <p>Explore how we serve</p>
@@ -25,14 +21,11 @@
         </div>
     </header>
 
-    <section class="intro-section">
-        <h2>In the Philippines,<br>the heart to do good is everywhere.</h2>
-        <p>
-            From neighborhood pantries to mission-driven startups, <br>
-            <strong>kindness runs deep in our culture. </strong><br><br>
-            But good intentions alone aren’t enough. <strong>What we often lack is structure.</strong> Clear ways to turn compassion into lasting impact.<br><br>
-            That's why ISACC is building tools and ideas for <strong>communities and businesses</strong> to make generosity not just a moment, but a movement.
-        </p>
+    <section class="intro-section text-center-underline">
+        <div class="content-wrapper">
+            <h2>In the Philippines, the heart to do good is everywhere.</h2>
+            <p style="text-align: center;">From neighborhood pantries to mission-driven startups, kindness runs deep in our culture. <br><br> But good intentions alone aren’t enough. What we often lack is structure. Clear ways to turn compassion into lasting impact.<br><br> That's why ISACC is building tools and ideas for communities and businesses to make generosity not just a moment, but a movement.</p>
+        </div>
     </section>
 
     <section class="carousel-section">
@@ -48,21 +41,21 @@
                 <img src="image3.jpg" alt="Cultivating Stewardship">
                 <div class="slide-caption">
                     <h3>Cultivating a Culture of Stewardship<br><span>in local Filipino enterprises for sustainable growth</span></h3>
-                     <a href="/research.html" class="carousel-button">Learn More</a>
+                    <a href="/research.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="image4.jpg" alt="Good Governance">
                 <div class="slide-caption">
                     <h3>Championing Good Governance<br><span>and active citizenship</span></h3>
-                     <a href="/advocacy.html" class="carousel-button">Learn More</a>
+                    <a href="/advocacy.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
             <div class="carousel-slide">
                 <img src="image5.jpg" alt="Publishing Media">
                 <div class="slide-caption">
                     <h3>Publishing Thought-Leading Media<br><span>on faith, justice and social transformation</span></h3>
-                     <a href="/publications.html" class="carousel-button">Learn More</a>
+                    <a href="/publications.html" class="carousel-button">Learn More</a>
                 </div>
             </div>
         </div>
@@ -164,6 +157,7 @@
             </ul>
         </nav>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
