--- a/trainings.html
+++ b/trainings.html
@@ -45,37 +45,31 @@
     <section class="courses-section">
         <div class="content-wrapper">
             <div class="course-grid">
-
                 <div class="course-card">
                     <i class="fa-solid fa-church"></i>
                     <h3>GOSPEL, CULTURE AND THE FILIPINO CHURCH (GCFC)</h3>
                     <p class="course-audience"><strong>For pastors and church workers.</strong> This seminar deepens cultural understanding for more effective witness and ministry within the Philippines.</p>
                 </div>
-
                 <div class="course-card">
                     <i class="fa-solid fa-seedling"></i>
                     <h3>TRANSFORMATIONAL DEVELOPMENT</h3>
                     <p class="course-audience"><strong>For development managers and practitioners.</strong> A two-week intensive to apply Christian values in community development and poverty-reduction.</p>
                 </div>
-                
                 <div class="course-card">
                     <i class="fa-solid fa-heart-pulse"></i>
                     <h3>UNDERSTANDING INTEGRAL MISSION</h3>
                     <p class="course-audience"><strong>For faith-based organizations.</strong> Learn the framework of Integral Mission and how to apply it practically in your development work.</p>
                 </div>
-
                 <div class="course-card">
                     <i class="fa-solid fa-globe"></i>
                     <h3>CROSS-CULTURAL ORIENTATION (CCOS)</h3>
                     <p class="course-audience"><strong>For expatriates and leaders new to the Philippines.</strong> Gain essential cultural intelligence to work effectively and sensitively in the Filipino context.</p>
                 </div>
-
                 <div class="course-card">
                     <i class="fa-solid fa-pen-nib"></i>
                     <h3>WRITING BIBLICALLY</h3>
                     <p class="course-audience"><strong>For writers and media practitioners.</strong> A 3-day seminar to help you discern contemporary issues and write with a Christian mind.</p>
                 </div>
-
                 <div class="course-card">
                     <i class="fa-solid fa-briefcase"></i>
                     <h3>WHOLENESS IN THE WORKPLACE</h3>
@@ -101,10 +95,46 @@
     </section>
 
     <footer>
-        </footer>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <div id="fullscreen-menu">
-        </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings.html">Trainings</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
