--- a/research.html
+++ b/research.html
@@ -42,7 +42,6 @@
         <div class="content-wrapper">
             <h3>Historical Research & Documentation</h3>
             <div class="timeline">
-
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>Conversion to Protestant Christianity Under Early American Rule (1995-1999)</h4>
@@ -57,7 +56,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>Homeroom: An Evaluation (1982-1985)</h4>
@@ -71,23 +69,57 @@
                         </div>
                     </div>
                 </div>
-
                  <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>Project Evaluation Studies for International NGOs</h4>
                         <p>ISACC provides project evaluation and consultancy services. Notable studies include a study on culturally-sensitive exit strategies for Tear Fund UK and an impact assessment of disaster interventions for Woord en Daad, Netherlands.</p>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
 
     <footer>
-        </footer>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <div id="fullscreen-menu">
-        </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings.html">Trainings</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
