--- a/podcast.html
+++ b/podcast.html
@@ -4,24 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISACC - Isip-Isak Podcast</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="hero-section hero-podcast">
-        <nav>
-            <img src="isacc_logo.png" alt="ISACC Logo" class="logo">
-        </nav>
-        
-        <button class="menu-toggle" aria-label="Open menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-
-        <div class="hero-page-title">
-            <h1>Podcast</h1>
-        </div>
+        <nav><img src="isacc_logo.png" alt="ISACC Logo" class="logo"></nav>
+        <button class="menu-toggle" aria-label="Open menu"><span></span><span></span><span></span></button>
+        <div class="hero-page-title"><h1>Podcast</h1></div>
     </header>
 
     <section class="intro-section">
@@ -29,7 +20,7 @@
             <div class="podcast-description">
                 <h2>Isip-Isak</h2>
                 <p><strong>(English: think like ISACC)</strong></p>
-                <p>Dr. Melba Padilla Maggay (a writer, social anthropologist, and social activist) interviews Filipino voices (social figures, thought-leaders, politicians) and discusses how to make sense of faith and how we express it in our daily lives.</p>
+                <p>Dr. Melba Padilla Maggay (a writer, social anthropologist, and social activist) interviews Filipino voices—social figures, thought-leaders, and politicians—to discuss how to make sense of faith and how we express it in our daily lives.</p>
                 <div class="social-links">
                     <a href="https://web.facebook.com/profile.php?id=61550959538507" target="_blank" class="social-button facebook">View on Facebook</a>
                     <a href="#" target="_blank" class="social-button spotify">Listen on Spotify</a>
